# KrakenWaf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: artifacts.yml  security.yml
alert/: blockalert.html
certs/: cert.pem  key.pem
conf/: update.yaml
docs/: allowpaths.md  attack_tool.md  blockaddrs_allowaddrs.md  deployment.md  detect_only_mode.md  firehol_updates.md  fuzzing.md  http_action.md  integration_tests.md  libinjection.md  observability.md  rate_limit.md  real-ip-header-and-trusted-proxy-cidrs.md  scanner_agents.md  score_rank.md  spamhaus_dqs_updates.md  vectorscan_rules.md
docs/cmc/: anti_exposed_backup.md  anti_passwd_leak.md  crlf_injection_detect.md  detect_db_errors.md  esi_injection_detect.md  java_deserialize_detect.md  nosql_injection_detect.md  overflow_detect.md  request_smuggling_detect.md  schema.md  sqli_comments_detect.md  ssi_injection_detect.md  ssti_detect.md  xxe_attack_detect.md
docs/dfa/: anti_exposed_backup.md  anti_passwd_leak.md  crlf_injection_detect.md  esi_injection_detect.md  java_deserialize_detect.md  nosql_injection_detect.md  overflow_detect.md  request_smuggling_detect.md  schema.md  sqli_comments_detect.md  ssi_injection_detect.md  ssti_detect.md  xxe_attack_detect.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cmc_inspect.rs  parse_rules.rs  url_decode.rs
rules/: blocklist_ip.txt  rules.json
rules/Vectorscan/: strings2block.json
rules/addr/: allowlist.txt  blocklist.txt
rules/addr/blocklist/: bots.txt  bruteforcelogin.txt
rules/addr/firehol/: c2_tracker.ipset
rules/addr/spamhaus/: AUTHBL.txt  DROP.txt  SBL.txt  XBL.txt
rules/allowpaths/: lists.yaml
rules/cmc/: config.yaml
rules/dfa/: config.yaml
rules/error_msgs/: sql_errors.txt
rules/headers_http/: api_compat.headers  balanced.headers  locked_down.headers  relax.headers  strict.headers
rules/regex/: .header_regex.json.swp  body_regex.json  header_regex.json  path_regex.json
rules/tls/: localhost.cnf  sni_map.csv
rules/user_agents/: scanners.txt
src/: allowpaths.rs  app.rs  banner.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  proxy.rs  response_headers.rs  server.rs  storage.rs  tls.rs  update.rs
src/cmc/: anti_exposed_backup.rs  anti_passwd_leak.rs  crlf_injection_detect.rs  detect_db_errors.rs  esi_injection_detect.rs  java_deserialize_detect.rs  mod.rs  nosql_injection_detect.rs  overflow_detect.rs  request_smuggling_detect.rs  sqli_comments_detect.rs  ssi_injection_detect.rs  ssti_detect.rs  xxe_attack_detect.rs
src/dfa/: anti_exposed_backup.rs  anti_passwd_leak.rs  crlf_injection_detect.rs  esi_injection_detect.rs  java_deserialize_detect.rs  mod.rs  nosql_injection_detect.rs  overflow_detect.rs  request_smuggling_detect.rs  sqli_comments_detect.rs  ssi_injection_detect.rs  ssti_detect.rs  xxe_attack_detect.rs
src/ffi/: mod.rs
src/ffi/libinjection/: bindings.rs  mod.rs
src/rules/: loader.rs  mod.rs
src/waf/: engine.rs  mod.rs  rate_limit.rs
src/waf/engine/: finding.rs  ip_filter.rs  matchers.rs  mod.rs  normalize.rs
tests/: dvwa_payloads.rs  malformed_payloads.rs  rules_and_limits.rs  server_real_test.rs  update_and_spamhaus.rs
