
[package]
name = "krakenwaf"
version = "1.2.7"
edition = "2021"
authors = ["Orangewarrior"]
description = "TLS-aware Rust WAF inspired by OctopusWAF"
license = "MIT"

[features]
default = []
libinjection-engine = ["dep:libinjection"]
vectorscan-engine = ["dep:vectorscan"]

[dependencies]
aho-corasick = "1.1"
ammonia = "4.0"
anyhow = "1.0"
bytes = "1.7"
crypto-common = "0.1.7"
generic-array = "1.3.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
ipnet = "2.10"
once_cell = "1.19"
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2"] }
rustls = "0.23"
rustls-pemfile = "2.1"
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
libinjection = { git = "https://github.com/libinjection/libinjection-rs", optional = true }
vectorscan = { version = "0.1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"
