
[package]
name = "krakenwaf"
version = "2.11.0"
edition = "2021"
authors = ["Orangewarrior"]
description = "TLS-aware Rust WAF inspired by OctopusWAF"
license = "MIT"

[features]
default = []
vectorscan-engine = ["dep:vectorscan"]

[dependencies]
memchr = "2.7"
parking_lot = "0.12"
aho-corasick = "1.1"
ammonia = "4.0"
anyhow = "1.0"
bytes = "1.7"
crypto-common = "0.1.7"
generic-array = "1.3.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
ipnet = "2.10"
once_cell = "1.19"
percent-encoding = "2.3"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json"] }
rustls = "0.23"
rustls-pki-types = { version = "1", features = ["std"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
url = "2.5"
vectorscan = { package = "vectorscan-rs", version = "0.0.6", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset"] }
tokio = { version = "1.52", features = ["full"] }

[build-dependencies]
cc = "1.2"
